# nevscode

./: .gitignore  build.gradle  gradle.properties  grelease.jks  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: adcode.json  aip.license  ddd.crt  ddd.txt  mdPri.pem  tu.pem  tupub003.pem  userkey003.pem  zs183.txt  zxc.pem  zxc41.pem
app/src/main/cpp/: native-lib.cpp  show-lib.cpp
app/src/main/cpp/openssl/: opensslconf.h
app/src/main/res/anim/: animalone.xml  animaltwo.xml  dialog_enter.xml  dialog_exit.xml  fade.xml  hold.xml  load_animation.xml  translatepro.xml
app/src/main/res/color/: color_select.xml  love_notice_kill.xml  tab_text_color.xml
app/src/main/res/drawable/: animation_list.xml  bg_cicle_rected_code.xml  bg_cicle_recteds_code.xml  bg_cicle_recteds_code1.xml  bg_circle_rect_code.xml  bg_circle_rect_code1.xml  bg_select.xml  bg_select1.xml  bottom_line.xml  btn_bowens.xml  btn_press.xml  btn_press_login.xml  btn_press_login_gray.xml  btn_single.xml  btn_tabbar_car_selector.xml  btn_tabbar_guide_selector.xml  btn_tabbar_my_selector.xml  btn_tabbar_serve_selector.xml  btn_unpress.xml  cercle.xml  charge.xml  click_zero.xml  color_maintop.xml  dialog_circular.xml  edit_dialog.xml  frame.xml  frametwo.xml  health_circle.xml  health_item.xml  health_yello.xml  image_select_circle.xml  image_selector.xml  image_selector_circle.xml  imaginary_line.xml  img_selec_bag.xml  ios_back_drawable.xml  ios_edit.xml  item_chargeenter.xml  item_chargeguide.xml  (+55 more)
app/src/main/res/drawable-v21/: btn_bowen.xml  btn_bowens.xml  color_maintop.xml  item_mycar.xml  item_yelow_code.xml  listview_click.xml  n_shape_pay.xml
(+629 files in other folders)
